--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <h1>Hello Adalab</h1>
-<p>我正在学习<strong>HTML</strong></p>
+<p>我正在学习<a href="https://html.spec.whatwg.org/multipage/">HTML</a></p>
 </body>
 
 </html>
